--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,81 +6,20 @@
         <title>{{ site.title | escape }}{% if page.title and page.title != site.title %} | {{ page.title | escape }}{% endif %}</title>
         <meta name="description" content="{{ site.description }}">
 
-        <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
 
-        <!-- SEO Tags -->
-        <meta property="og:title" content="{{ page.title | escape }}{% if page.title and page.title != site.title %} | {{ site.title | escape }}{% endif %}" />
-        <meta property="og:description" content="{{ page.description | default:site.description | escape }}" />
-        <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-        <meta property="og:image" content="{{ site.url }}{{ site.seo.default_image }}" />
-        <meta property="og:type" content="website" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="{{ page.title | escape }}{% if page.title and page.title != site.title %} | {{ site.title | escape }}{% endif %}" />
-        <meta name="twitter:description" content="{{ page.description | default:site.description | escape }}" />
-        <meta name="twitter:image" content="{{ site.url }}{{ site.seo.default_image }}" />
-        <meta name="twitter:site" content="@{{ site.seo.twitter.username }}" />
+        {% include seo-tags.html %}
     </head>
     <body>
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-41YFF2XT43"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+        {% include google-analytics.html %}
 
-        gtag('config', 'G-41YFF2XT43');
-        </script>
-
-        <!-- Content -->
         <div class="container my-5 px-3" style="max-width: 1000px;">
             {{ content }}
         </div>
 
-        <!-- Dark Mode -->
-        <button id="dark-mode-toggle" class="btn btn-outline-secondary position-fixed top-0 end-0 m-3"><span id="dark-mode-icon" class="fa fa-moon"></span></button>
-        <script>
-            const darkModeToggle = document.getElementById('dark-mode-toggle');
-            const darkModeIcon = document.getElementById('dark-mode-icon');
+        {% include dark-mode-switcher.html %}
 
-            const getStoredTheme = () => localStorage.getItem('theme');
-            const setStoredTheme = theme => localStorage.setItem('theme', theme);
-
-            const getPreferredTheme = () => {
-                const storedTheme = getStoredTheme()
-                if (storedTheme) {
-                    return storedTheme
-                }
-                return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-            }
-
-            const setTheme = theme => {
-                if (theme === 'auto') {
-                    document.documentElement.setAttribute('data-bs-theme', (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'));
-                } else {
-                    document.documentElement.setAttribute('data-bs-theme', theme);
-                }
-                if (theme === 'dark') {
-                    darkModeIcon.classList.remove('fa-sun');
-                    darkModeIcon.classList.add('fa-moon');
-                } else {
-                    darkModeIcon.classList.remove('fa-moon');
-                    darkModeIcon.classList.add('fa-sun');
-                }
-            }
-
-            setTheme(getPreferredTheme());
-
-            darkModeToggle.addEventListener('click', () => {
-                const currentTheme = document.documentElement.getAttribute('data-bs-theme');
-                const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-                setTheme(newTheme);
-                setStoredTheme(newTheme);
-            });
-         </script>
-
-        <!-- JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
