fix: moving google analytics to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,10 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
 
         {% include seo-tags.html %}
+        {% include google-analytics.html %}
     </head>
     <body>
-        {% include google-analytics.html %}
+        {% include consent-banner.html %}
 
         <div class="container my-5 px-3" style="max-width: 1000px;">
             {{ content }}
