feat: adding navigation

--- a/_includes/dark-mode-switcher.html
+++ b/_includes/dark-mode-switcher.html
@@ -1,5 +1,5 @@
 <!-- Dark Mode -->
-<button id="dark-mode-toggle" class="btn btn-outline-secondary position-fixed top-0 end-0 m-3"><span id="dark-mode-icon" class="fa fa-moon"></span></button>
+<button id="dark-mode-toggle" class="btn btn-outline-secondary position-fixed bottom-0 end-0 m-3"><span id="dark-mode-icon" class="fa fa-moon"></span></button>
 <script>
     const darkModeToggle = document.getElementById('dark-mode-toggle');
     const darkModeIcon = document.getElementById('dark-mode-icon');
