feat: adding pages under development

--- a/_includes/footer.html.liquid
+++ b/_includes/footer.html.liquid
@@ -5,7 +5,7 @@
         <!-- About Section -->
         <div class="col-md-6 text-md-start text-center">
           <h5>Ploid: Leading AI for Biotech</h5>
-          <div>
+          <div class="pb-3">
             <span class="text-muted">&copy; 2024 Ploid AI Biotech. All rights reserved.</span>
           </div>
         </div>
@@ -19,8 +19,6 @@
           <div>
             <a class="btn" href="mailto:{{ site.emails.contact }}">Contact Us</a>
             <a class="btn" href="mailto:{{ site.emails.jobs }}">Jobs</a>
-          </div>
-          <div>
             <a class="btn" href="/terms-of-service">Terms of Service</a>
             <a class="btn" href="/privacy-policy">Privacy Policy</a>
           </div>
