fix: adding blank target for socials

--- a/_includes/footer.html.liquid
+++ b/_includes/footer.html.liquid
@@ -13,8 +13,8 @@
         <!-- Social Media & Contact -->
         <div class="col-md-6 text-md-end text-center">
           <div>
-            <a class="btn" href="https://twitter.com/{{ site.seo.twitter.username }}"><i class="fab fa-x-twitter"></i> Twitter</a>
-            <a class="btn" href="https://www.linkedin.com/company/{{ site.seo.linkedin.username }}"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a class="btn" href="https://twitter.com/{{ site.seo.twitter.username }}" target="_blank"><i class="fab fa-x-twitter"></i> Twitter</a>
+            <a class="btn" href="https://www.linkedin.com/company/{{ site.seo.linkedin.username }}" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
           </div>
           <div>
             <a class="btn" href="mailto:{{ site.emails.contact }}">Contact Us</a>
